fix spacing and delete zero

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ body {
   width: 100%;
 }
 
-
 .gutter {
-  padding-bottom: .10em;
+  padding-bottom: .1em;
 }
